<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.padmal.accountsystemv12.Activity_NewCategory">

    <Button
        android:id="@+id/newcategorybuttonupdate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/create"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/newcategorybuttonclear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="clearButtonClicked"
        android:text="@string/clear"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="15dp"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <ToggleButton
            android:id="@+id/newcategorytype"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="end|center_vertical"
            android:checked="false"
            android:textOff="@string/expense"
            android:textOn="@string/income"
            android:textSize="18sp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_alignLeft="@+id/frameLayout2"
        android:layout_alignStart="@+id/frameLayout2"
        android:layout_below="@+id/frameLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/newcategorytextdescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="textMultiLine|textCapWords"
            android:textStyle="italic"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/frameLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/frameLayout"
        android:layout_below="@+id/frameLayout">

        <EditText
            android:id="@+id/newcategorytextcategory"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:ems="10"
            android:inputType="text|textCapWords"
            android:lines="1"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="15dp"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold"/>
    </FrameLayout>


</RelativeLayout>
